refactor: migrate to Java 8, Tomcat 9, JSF 2.3 and Hibernate 5
Co-authored-by: Cursor <cursoragent@cursor.com>